samples/_failures_safe/1761603224_9544ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc667bce.c: In function ‘main’:
./samples/SAFE/__tmp_dc667bce.c:152:17: error: expected expression at end of input
  152 |                 } else
      |                 ^
./samples/SAFE/__tmp_dc667bce.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc667bce.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc667bce.c:152:17: error: expected declaration or statement at end of input
